Fix spacing issue and issue with code blocks inside lists

--- a/styles.css
+++ b/styles.css
@@ -304,7 +304,7 @@ div.lecture-bookmark-v2--content-container--2f_Tg > div > div ol > li {
 
 div.lecture-bookmark-v2--content-container--2f_Tg > div > div ul > li:not(:first-child),
 div.lecture-bookmark-v2--content-container--2f_Tg > div > div ol > li:not(:first-child) {
-    margin-top: .8rem;
+    margin-top: .4rem;
 }
 
 div.lecture-bookmark-v2--content-container--2f_Tg > div > div ul p,
@@ -322,7 +322,7 @@ div.lecture-bookmark-v2--content-container--2f_Tg > div > div > div {
 }
 
 
-div.lecture-bookmark-v2--content-container--2f_Tg > div > div > div > div > pre {
+div.lecture-bookmark-v2--content-container--2f_Tg > div > div div > div > pre {
     display: block;
     margin: 0 0 10.5px;
     line-height: 1.43;
@@ -337,7 +337,7 @@ div.lecture-bookmark-v2--content-container--2f_Tg > div > div > div > div > pre 
     background-color: inherit;
 }
 
-div.lecture-bookmark-v2--content-container--2f_Tg > div > div > div > div > pre > ol {
+div.lecture-bookmark-v2--content-container--2f_Tg > div > div div > div > pre > ol {
     font-size: inherit;
     max-width: 60rem;
     margin-top: 0;
@@ -348,7 +348,7 @@ div.lecture-bookmark-v2--content-container--2f_Tg > div > div > div > div > pre 
     counter-reset: customlistcounter;
 }
 
-div.lecture-bookmark-v2--content-container--2f_Tg > div > div > div > div > pre > ol > li {
+div.lecture-bookmark-v2--content-container--2f_Tg > div > div div > div > pre > ol > li {
     font-size: inherit;
     font-weight: 400;
     margin-top: 0!important;
@@ -358,11 +358,11 @@ div.lecture-bookmark-v2--content-container--2f_Tg > div > div > div > div > pre 
     margin-bottom: 0!important;
 }
 
-div.lecture-bookmark-v2--content-container--2f_Tg > div > div > div > div > pre > ol > li:not(:first-child) {
+div.lecture-bookmark-v2--content-container--2f_Tg > div > div div > div > pre > ol > li:not(:first-child) {
     margin-top: 4px!important;
 }
 
-div.lecture-bookmark-v2--content-container--2f_Tg > div > div > div > div > pre > ol > li::before {
+div.lecture-bookmark-v2--content-container--2f_Tg > div > div div > div > pre > ol > li::before {
     content: counter(customlistcounter) ' ';
     width: 40px;
     display: inline-block;
